# wavelux

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  rust-analyzer.toml
assets/styling/: main.css
src/: main.rs
src/audio/: mod.rs
src/components/: keys.rs  mod.rs  toggle_button.rs
